--- a/app/src/main/res/layout/activity_outdoor.xml
+++ b/app/src/main/res/layout/activity_outdoor.xml
@@ -113,26 +113,32 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
+        android:layout_width="119dp"
         android:layout_height="wrap_content"
-        android:layout_x="49dp"
+        android:layout_x="18dp"
         android:layout_y="142dp"
-        android:text="@string/all" />
+        android:backgroundTint="@color/White"
+        android:text="@string/all"
+        android:textColor="@color/Text" />
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="wrap_content"
+        android:layout_width="116dp"
         android:layout_height="wrap_content"
-        android:layout_x="155dp"
-        android:layout_y="142dp"
-        android:text="@string/outdoor" />
+        android:layout_x="144dp"
+        android:layout_y="143dp"
+        android:backgroundTint="@color/Accent"
+        android:text="@string/outdoor"
+        android:textColor="@color/Text" />
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="wrap_content"
+        android:layout_width="107dp"
         android:layout_height="wrap_content"
-        android:layout_x="272dp"
+        android:layout_x="271dp"
         android:layout_y="143dp"
-        android:text="@string/tennis" />
+        android:backgroundTint="@color/White"
+        android:text="@string/tennis"
+        android:textColor="@color/Text" />
 
 </AbsoluteLayout>
