--- a/app/src/main/res/layout/activity_straignt.xml
+++ b/app/src/main/res/layout/activity_straignt.xml
@@ -23,6 +23,7 @@
         android:id="@+id/button2"
         android:layout_width="357dp"
         android:layout_height="79dp"
+        android:backgroundTint="@color/Block"
         android:layout_x="22dp"
         android:layout_y="621dp"
         android:text="@string/next"
