--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_x="0dp"
     android:layout_y="0dp"
-    tools:ignore="ExtraText">
+    tools:ignore="Deprecated">
 
 
     <ImageView
