--- a/app/src/main/res/layout/activity_main_search.xml
+++ b/app/src/main/res/layout/activity_main_search.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_x="0dp"
+    tools:ignore="Deprecated"
     android:layout_y="0dp"
     android:background="@color/Background">
 
