--- a/app/src/main/res/layout/activity_populariti.xml
+++ b/app/src/main/res/layout/activity_populariti.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="Deprecated"
     android:background="@color/Background"
     android:layout_height="match_parent">
 
