--- a/app/src/main/res/layout/activity_izbranno.xml
+++ b/app/src/main/res/layout/activity_izbranno.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:layout_x="0dp"
     android:layout_y="0dp"
+    tools:ignore="Deprecated"
     android:background="@color/Background">
 
 
