--- a/app/src/main/res/layout/activity_mycart.xml
+++ b/app/src/main/res/layout/activity_mycart.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/Background"
+    tools:ignore="Deprecated"
     android:layout_height="match_parent">
 
     <ImageView
